--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,29 @@ nav ul li:first-of-type {
     }
 }
 
+.logos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1000px;
+}
+
+.logos__element {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 250px;
+    max-height: 160px;
+    height: 22.5vh;
+    padding: 25px 30px;
+    border: 1px solid #f2f2f2;
+}
+
+.logos__element img {
+    margin: 0 auto;
+}
+
 footer {
     position: fixed;
     bottom: 0;
