--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,14 @@ nav ul li:first-of-type {
     border: 1px solid #f2f2f2;
 }
 
+.logos__element a {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    border: 0;
+}
+
 .logos__element img {
     margin: 0 auto;
 }
