--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,6 @@ h1 {
     font-weight: bold;
 }
 
-p {
-    line-height: 1.75em;
-}
-
 a {
     color: #333;
     text-decoration: none;
@@ -75,6 +71,24 @@ img {
     display: block;
     margin: 0;
     padding: 0;
+}
+
+img.round {
+    border-radius: 50%;
+}
+
+h1,
+h2,
+p {
+    line-height: 1.75em;
+}
+
+p.center-text {
+    text-align: center;
+}
+
+p img {
+    display: inline;
 }
 
 .container {
@@ -299,6 +313,71 @@ nav ul li:first-of-type {
 
 .logos__element img {
     margin: 0 auto;
+}
+
+.resume-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume {
+    min-width: 300px;
+    max-width: 500px;
+    width: 50%;
+    padding-top: 20px;
+}
+
+.resume__item {
+    position: relative;
+    width: 100%;
+    padding: 0 30px 60px;
+    text-align: left;
+}
+
+.resume__item:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 1px;
+    height: 100%;
+    background: var(--main-color);
+}
+
+.resume__item:last-of-type:before {
+    background: #fff;
+}
+
+.resume__item__date {
+    position: relative;
+    top: -15px;
+    height: 30px;
+    display: inline-block;
+    padding: 5px;
+    font-weight: 500;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+}
+
+.resume__item__date:before {
+    content: '';
+    width: 29px;
+    height: 1px;
+    position: absolute;
+    left: -30px;
+    top: 14px;
+    background: var(--main-color);
+}
+
+.resume__item__skills span {
+    display: inline-block;
+    padding: 5px;
+    margin: 0 8px 8px 0;
+    font-weight: 500;
+    line-height: 1em;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
 }
 
 footer {
